fixed bad usage of List.of to Array.asList